Fixing alignment of elements in "our impacts"

--- a/revolv/static/css/screen.css
+++ b/revolv/static/css/screen.css
@@ -668,27 +668,12 @@ a:hover {
 }
 .our-impacts-module .row .col-md-3:nth-child(1) .module-box {
   float: left;
-  /*width: 170px;
-  margin-left: -11px;*/
-}
-.our-impacts-module .row .col-md-3:nth-child(2) .module-box .titles {
-  /*padding-right: 30px;*/
-}
-.our-impacts-module .row .col-md-3:nth-child(3) .module-box .icons {
-  /*margin-left: 8%;*/
 }
 .our-impacts-module .row .col-md-3:nth-child(3) .module-box .titles {
   letter-spacing: -1.8px;
-  padding-top: 20px;
-  line-height: 40px;
 }
 .our-impacts-module .row .col-md-3:nth-child(4) .module-box {
   float: right;
-  /*width: 194px;*/
-}
-.our-impacts-module .row .col-md-3:nth-child(4) .module-box .titles {
-  padding-top: 20px;
-  line-height: 50px;
 }
 .our-impacts-module .module-box {
   text-align: center;
@@ -733,6 +718,7 @@ a:hover {
 }
 .our-impacts-module .module-box .font48 {
   font-size: 48px;
+  height: 66px;
 }
 .our-impacts-module .module-box .font72 {
   font-size: 72px;
@@ -748,6 +734,7 @@ a:hover {
   line-height: 22px;
   display: block;
   position: relative;
+  padding-top: 1rem;
 }
 .our-impacts-module .module-box .txt .position {
   position: relative;
@@ -3949,27 +3936,8 @@ header.edit-project-header > .container > h1 {
     margin: 0 58px 0 80px;
     padding: 0 0 30px 0;
   }
-  .our-impacts-module .row .col-md-3:nth-child(1) .module-box {
-    /*width: 140px;
-    margin-left: -11px;*/
-  }
-  .our-impacts-module .row .col-md-3:nth-child(2) .module-box .titles {
-    /*padding-right: 30px;*/
-  }
-  .our-impacts-module .row .col-md-3:nth-child(3) .module-box .icons {
-    /*margin-left: 5%;*/
-  }
-  .our-impacts-module .row .col-md-3:nth-child(3) .module-box .titles {
-    padding-top: 14px;
-    line-height: 25px;
-  }
   .our-impacts-module .row .col-md-3:nth-child(4) .module-box {
     float: right;
-    /*width: 155px;*/
-  }
-  .our-impacts-module .row .col-md-3:nth-child(4) .module-box .titles {
-    padding-top: 14px;
-    line-height: 35px;
   }
   .our-impacts-module .module-box .icons {
     width: 136px;
@@ -3989,6 +3957,7 @@ header.edit-project-header > .container > h1 {
   }
   .our-impacts-module .module-box .titles {
     line-height: 45px;
+    height: 45px;
   }
   .our-impacts-module .module-box .font20 {
     font-size: 16.53px;
@@ -4002,7 +3971,6 @@ header.edit-project-header > .container > h1 {
   .our-impacts-module .module-box .txt {
     font-size: 14.88px;
     line-height: 17px;
-    padding-top: 6px
   }
   /* .how-it-works-module */
   .how-it-works-module .container {
@@ -6077,27 +6045,15 @@ header.edit-project-header > .container > h1 {
     width: 100%;
     margin-left: 0;
   }
-  .our-impacts-module .row .col-md-3:nth-child(2) .module-box .icons {
-    /*margin-left: auto;*/
-  }
   .our-impacts-module .row .col-md-3:nth-child(2) .module-box .titles {
     padding-right: 0;
   }
-  .our-impacts-module .row .col-md-3:nth-child(3) .module-box .icons {
-    /*margin-left: auto;*/
-  }
   .our-impacts-module .row .col-md-3:nth-child(3) .module-box .titles {
     letter-spacing: -1.8px;
-    padding-top: 20px;
-    line-height: 40px;
   }
   .our-impacts-module .row .col-md-3:nth-child(4) .module-box {
     float: none;
     width: 100%;
-  }
-  .our-impacts-module .row .col-md-3:nth-child(4) .module-box .titles {
-    padding-top: 5px;
-    line-height: 50px;
   }
   .our-impacts-module .module-box .icons {
     width: 168px;
@@ -6117,6 +6073,7 @@ header.edit-project-header > .container > h1 {
   }
   .our-impacts-module .module-box .titles {
     line-height: 66px;
+    height: 66px;
   }
   .our-impacts-module .module-box .font20 {
     font-size: 20.48px;
@@ -8688,12 +8645,6 @@ header.edit-project-header > .container > h1 {
   }
   .our-impacts-module .row .col-md-3:nth-child(3) .module-box .titles {
     letter-spacing: -0.9px;
-    padding-top: 10px;
-    line-height: 20px;
-  }
-  .our-impacts-module .row .col-md-3:nth-child(4) .module-box .titles {
-    padding-top: 2px;
-    line-height: 25px;
   }
   .our-impacts-module .module-box .icons {
     width: 84px;
@@ -8714,6 +8665,7 @@ header.edit-project-header > .container > h1 {
   }
   .our-impacts-module .module-box .titles {
     line-height: 33px;
+    height: 33px;
   }
   .our-impacts-module .module-box .font20 {
     font-size: 9px;
